# cassowary

./: .gitignore  README.md  buildall.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
app-linux/: build.sh  requirements.txt  setup.cfg
app-linux/src/: __init__.py
app-linux/src/base/: cfgvars.py  log.py
app-linux/src/cassowary/: __init__.py  __main__.py  cli.py  client.py
app-linux/src/cassowary/base/: cfgvars.py  functions.py  helper.py  log.py
app-linux/src/cassowary/desktopfiles/: cassowary-plasma-dirmenu.desktop  cassowary-plasma-filemenu.desktop  cassowaryApp-mimetype-handles.desktop  cassowaryApp_Explorer.desktop  cassowaryApp_linux_Configuration.desktop  cassowary_linux_bg_service.desktop
app-linux/src/cassowary/gui/components/: desktopitemdialog.py  main_ui.py  minidialog.py  sharesandmaps.py  vmstart.py
app-linux/src/cassowary/gui/qtui_files/: desktopcreate.ui  main.ui  newmap.ui  newshare.ui  notice.ui  vmstart.ui
app-linux/src/gui/components/: desktopitemdialog.py  sharesandmaps.py
app-linux/src/gui/qtui_files/: desktopcreate.ui  newmap.ui  newshare.ui
app-win/: build.bat  build.sh  requirements.txt
app-win/src/: __init__.py  client.py  package.spec  server.py
app-win/src/base/: cfgvars.py  helper.py  log.py
app-win/src/base/command/: __init__.py  cmd_apps.py  cmd_asso.py  cmd_dirs.py  cmd_general.py
app-win/src/extras/: cassowary-server.xml  cassowary_nw.vbs  hostopen.bat  nowindow.vbs  setup.bat  setup.reg
docs/: 1-virt-manager.md  2-cassowary-install.md  3-faq.md
