[metadata]
name = cassowary
version = 0.5
description = Cassowary - Integrate windows VM with linux ( client ).
long_description = file: README.md
long_description_content_type = text/markdown
author = Casual Snek
author_email = casualsnek@pm.me
url = https://github.com/causalsnek/cassowary
keywords = cassowary, winapps alternative, windows vm in linux
license = GPL-2.0 License

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    cassowary = cassowary:main

[options.packages.find]
where=src, src/base, src/gui/components, src/gui/qtui_files, src/gui/extrares

[options.package_data]
* = *.ui, *.png
